fix test - regarding bootstrap steps